# rust-air

./: .gitattributes  .gitignore  Cargo.toml  OPTIMIZATION_PLAN.md  README.md  clip_log.txt  clip_log2.txt  dev_log.txt
.claude/skills/rust-air-iteration/: SKILL.md
.claude/skills/rust-air-iteration/references/: release-checklist.md  sync-checklist.md  updater-checklist.md
.github/workflows/: cleanup-caches.yml  release.yml
.kiro/skills/: rust-air-project.md  rust-air-testing.md  rust-archive-engine.md  rust-async-patterns.md  rust-transfer-protocol.md
.kiro/specs/android-build-setup/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/archive-transfer-premature-completion/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/auto-update-rollback-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/parallel-small-file-transfer/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/shared-clipboard/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/shared-whiteboard/: design.md  requirements.md  tasks.md
.kiro/specs/todolist-calendar/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/transfer-resume/: design.md  requirements.md  tasks.md
.kiro/specs/transfer-resume-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/transfer-speed-boost/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/update-old-version-cleanup/: .config.kiro  bugfix.md  design.md  tasks.md
.opencode/: iteration_log.md  profile.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/examples/: clip_test.rs
core/src/: archive.rs  clipboard.rs  clipboard_history.rs  clipboard_sync.rs  crypto.rs  discovery.rs  discovery_udp.rs  http_qr.rs  lib.rs  proto.rs  stubs.rs  sync_vault.rs  transfer.rs  whiteboard.rs
core/tests/: archive_bug_test.rs  archive_preservation_test.rs  transfer_resume_fix_exploration.rs  transfer_resume_fix_preservation.rs  transfer_speed_test.rs
docs/: android-build.md  android-init.md
scripts/: build-all.sh  build-android.sh  build-desktop.ps1  build-desktop.sh  gen-android-key.ps1  gen_icons.py  gen_project_icons.py
tauri-app/: APP_VUE_DESIGN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
tauri-app/src/: App.vue  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: clip_history_commands.rs  clip_sync_commands.rs  commands.rs  lib.rs  search_commands.rs  sync_commands.rs  todo_commands.rs  update_commands.rs  whiteboard_commands.rs
tauri-app/src-tauri/tests/: msi_upgrade_bug_exploration.rs  update_preservation_test.rs
tauri-app/src/components/: DevicesPanel.vue  SearchPanel.vue  SyncPanel.vue  WhiteboardPanel.vue
tauri-app/src/composables/: useClipboardSync.ts  useDevices.ts  useSearch.ts  useSync.ts  useTransfer.ts  useUpdate.ts  useWhiteboard.ts
tauri-app/src/types/: app.ts
tauri-app/src/utils/: transfer.ts
