[package]
name    = "rust-air-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "rust_air_core"

[dependencies]
tokio      = { workspace = true }
tokio-util = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }

# Crypto
chacha20poly1305 = "0.10"
rand             = "0.8"
base64           = "0.22"
sha2             = "0.10"

# Archive
tar     = "0.4"
zstd    = "0.13"
os_pipe = "1"

# Discovery (mDNS-SD replaces UDP broadcast)
mdns-sd = "0.19"

# Progress
indicatif = "0.17"

# Clipboard
arboard = "3"

# Clipboard history
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
dirs       = "5"

# HTTP + QR (for --qr flag)
axum   = "0.7"
qrcode = "0.14"
