[package]
name    = "rust-air-core"
version = "0.3.33"
edition = "2021"

[lib]
name = "rust_air_core"

[dependencies]
tokio      = { workspace = true }
tokio-util = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
socket2    = "0.5"

# Crypto
chacha20poly1305 = "0.10"
rand             = "0.8"
base64           = "0.22"
sha2             = "0.10"

# Archive
tar     = "0.4"
zstd    = "0.13"
os_pipe = "1"
rayon   = "1"

# Discovery (mDNS-SD replaces UDP broadcast)
mdns-sd   = "0.19"
if-addrs  = "0.13"

# Progress
indicatif = "0.17"

# Clipboard
# arboard kept only for clipboard read/write in CLI send-clip command
arboard = "3"

# Shared utilities (used by sync_vault)
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
dirs       = "5"
unicode-normalization = "0.1"

# Sync vault
notify  = "6"
hex     = "0.4"
walkdir = "2"

# HTTP + QR (for --qr flag)
axum   = "0.7"
qrcode = "0.14"

[dev-dependencies]
tokio = { workspace = true }
