[package]
name        = "tauri-app"
version     = "0.2.0"
description = "rust-air — LAN file transfer"
authors     = ["you"]
edition     = "2021"

[lib]
name       = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
base64             = "0.22"
rand               = "0.8"
rust-air-core      = { path = "../../core" }
