[package]
name        = "tauri-app"
version     = "0.3.33"
description = "rust-air — LAN file transfer"
authors     = ["you"]
edition     = "2021"

[lib]
name       = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
base64             = "0.22"
rand               = "0.8"
rust-air-core      = { path = "../../core" }
dirs               = "5"
local-ip-address   = "0.6"
regex              = "1"
ignore             = "0.4"
memmap2            = "0.9"
num_cpus           = "1"
encoding_rs        = "0.8"
notify             = "6"
hex                = "0.4"
arboard            = "3"
image              = { version = "0.25", default-features = false, features = ["png"] }
unicode-normalization = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
